--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             python3 -m venv venv
             . venv/bin/activate
-            pip install -r .circleci/requirements.txt
+            pip install -r requirements.txt
 
       - save_cache:
           paths:
@@ -48,7 +48,7 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            pytest 
+            pytest q
 
       - store_artifacts:
           path: test-reports
